fix town name overflow

--- a/src/styles/current.css
+++ b/src/styles/current.css
@@ -6,10 +6,6 @@ main {
   align-items: center;
 }
 
-main > * {
-  padding: 0 var(--padding-side);
-}
-
 main img {
   filter: var(--shadow-filter);
 }
@@ -19,11 +15,13 @@ main p {
 }
 
 .current-weather_form {
+  padding: 0 var(--padding-side) 0 0;
   justify-self: end;
   grid-area: form;
 }
 
 .current-weather_container {
+  padding: 0 0 0 var(--padding-side);
   display: grid;
   grid-area: container;
   grid-template-areas:
@@ -34,20 +32,19 @@ main p {
     'text text'
     'list list';
   grid-template-rows: repeat(3, max-content) 5rem;
-  grid-template-columns: min-content max-content;
+  grid-template-columns: 1fr 1fr;
   row-gap: 0.2rem;
   column-gap: 1rem;
 }
 
 .current-weather_town {
-  white-space: normal;
-  word-break: break-all;
-  word-wrap: break-word;
   grid-area: town;
   font-size: 3rem;
 }
 
 .current-weather_country {
+  word-break: break-all;
+  white-space: wrap;
   grid-area: country;
   font-size: 3rem;
 }
@@ -68,6 +65,7 @@ main p {
 }
 
 .current-weather_list {
+  word-break: keep-all;
   gap: 0.5rem;
   grid-area: list;
   margin: 0;
